--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spark.version>2.1.3</spark.version>
-    <cdap.version>6.1.1</cdap.version>
-    <hydrator.version>2.3.0-SNAPSHOT</hydrator.version>
-    <hadoop.version>2.3.0</hadoop.version>
+    <cdap.version>6.8.0</cdap.version>
+    <hydrator.version>2.10.0</hydrator.version>
+    <hadoop.version>2.10.2</hadoop.version>
     <!-- properties for script build step that creates the config files for the artifacts -->
     <widgets.dir>widgets</widgets.dir>
     <docs.dir>docs</docs.dir>
-    <app.parents>system:cdap-data-pipeline[6.1.1,7.0.0-SNAPSHOT),system:cdap-data-streams[6.1.1,7.0.0-SNAPSHOT)</app.parents>
+    <app.parents>system:cdap-data-pipeline[6.8.0,7.0.0-SNAPSHOT),system:cdap-data-streams[6.8.0,7.0.0-SNAPSHOT)</app.parents>
     <!-- this is here because project.basedir evaluates to null in the script build step -->
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
@@ -80,7 +80,7 @@
     </dependency>
     <dependency>
       <groupId>io.cdap.cdap</groupId>
-      <artifactId>cdap-data-pipeline</artifactId>
+      <artifactId>cdap-data-pipeline2_2.11</artifactId>
       <version>${cdap.version}</version>
       <scope>test</scope>
     </dependency>
